--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,7 @@ target/
 
 # DotEnv configuration
 .env
+.venv
 
 # Database
 *.db
@@ -75,8 +76,6 @@ target/
 # Jupyter NB Checkpoints
 .ipynb_checkpoints/
 
-# exclude data from source control by default
-/data/
 
 # Mac OS-specific storage files
 .DS_Store
@@ -87,3 +86,4 @@ target/
 
 # Mypy cache
 .mypy_cache/
+/run_information.json
