--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,20 @@
 -e .
 
 # external requirements
-click
-Sphinx
-coverage
+# click
+# Sphinx
+# coverage
+# awscli
+# flake8
+# python-dotenv>=0.5.1
+
+
+numpy
+pandas
+scikit-learn
+matplotlib
+seaborn
+mlflow
+dagshub
 awscli
-flake8
-python-dotenv>=0.5.1
+boto3
